# SVAIA_MON

./: .gitignore  README.md  deploy.sh  flake.nix  nix_deploy.sh  pyproject.toml  requirements.txt  ruff.toml
SBOMS/: grok_sbom.json
docs/: Documentación_Desarollo.md  Documentación_pruebas.md  README.md
safety_analysis/: 04-06-25.html
svaia/: services.pid
svaia/agents/: Cargo.toml  Settings.toml
svaia/agents/src/: main.rs  types.rs
svaia/metrics-handler/src/: main.py
svaia/metrics_handler/src/: main.py  utils.py
svaia/metrics_handler/test/: test_metrics_handler.py
svaia/mock-bd/: svaia_db.db
svaia/mock-bd/mariadb-data/: aria_log.00000001  aria_log_control  ib_buffer_pool
svaia/sbom-analyzer/src/: CVES.py  cycloneDX.py  main.py  utils_cve.py
svaia/sbom_analyzer/: .env  README.md
svaia/sbom_analyzer/src/: config.py  cve_parser.py  main.py  utils_cve.py
svaia/sbom_analyzer/test/: test_sbom_analyzer.py
svaia/secure_log_manager/src/: SecureLogManager.py
svaia/secure_log_manager/test/: test_secure_log_manager.py
svaia/web-api/: app.py  config.toml
svaia/web-gui/: app.py  config.toml  util.py
svaia/web-gui/SAST/: 04-06-25-bandit.txt  04-06-25-semgrep.txt
svaia/web-gui/static/js/: index.js
svaia/web-gui/templates/: _macros.html  chat.html  crear_proyecto.html  crear_proyecto_legacy.html  crear_usuario.html  cve.html  editar_proyecto.html  editar_usuario.html  eliminar_usuario.html  i_personal.html  index.html  layout.html  login.html  metricas_proyecto.html  proyectos.html  usuarios.html
svaia/web_api/: app.py  config.toml  models.py
(+188 files in other folders)
