[package]
name = "Agent_mock"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
tokio = {version = "1.45.0",features = ["full"] }
tokio-tungstenite = {version = "0.26.2", features = ["rustls-tls-native-roots"]}
rustls = { version = "0.23",features = ["ring"]}
ring = "0.17"
url = "2.5.4"
sysinfo = "0.35.1"
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0"
gethostname = "1.0.2"
jiff ={version = "0.2.14",features = ["serde"]}
notify ={version = "8.0.0",features = ["serde"]}
config = "0.15.11"
